[package]
name = "ufe"
version = "0.0.0"
edition = "2021"
description = "User facing error library"
license = "MPL-2.0"
authors = ["Marcel Müller <neikos@neikos.email>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.3.0", features = ["auto-color", "concolor"] }
derive_setters = "0.1.6"
linkme = "0.3.10"

[dev-dependencies]
thiserror = "1.0.40"
